2011-01-15  H.J. Lu  <hongjiu.lu@intel.com>

	* Makefile: New.
	* README: Likewise.