@@ -30,10 +30,9 @@ endif
 CFLAGS+=-fPIC -fno-exceptions $(INCLUDES) $(CPP_FLAGS)
 LIBGCC=$(shell $(CC) $(CFLAGS) -print-libgcc-file-name)
 
-# FIXME: Optimization doesn't work with -mx32.
-#CFLAGS+=-O2
+CFLAGS+=-O2 -g
 
-CFLAGS+=-g
+LDFLAGS=-Wl,-z,nocombreloc
 
 OBJCOPY=objcopy
 
@@ -776,21 +775,21 @@ all: $(OBJS) $(SHARED_LIBS) $(STATIC_LIBS) $(ld.so_LIB) $(EXES)
 	done
 
 define build-dynamic-executable
-$(CC) $(CFLAGS) -o $@ -nostdlib -Wl,-z,nocopyreloc \
+$(CC) $(CFLAGS) -o $@ -nostdlib -Wl,-z,nocopyreloc $(LDFLAGS) \
 	-Wl,-dynamic-linker $(LD.SO) \
 	$(LIB_DIR)/crtbegin_dynamic.o $($(@F)_OBJS) $($(@F)_DEPS) \
 	$(DYNAMIC_LIBC) $(LIB_DIR)/crtend_android.o
 endef
 
 define build-static-executable
-$(CC) $(CFLAGS) -o $@ -nostdlib -Wl,-Bstatic \
+$(CC) $(CFLAGS) -o $@ -nostdlib -Wl,-Bstatic $(LDFLAGS) \
 	$(LIB_DIR)/crtbegin_static.o $($(@F)_OBJS) $($(@F)_DEPS) \
 	$(STATIC_LIBC) $(LIB_DIR)/crtend_android.o
 endef
 
 define build-shlib
 $(CC) $(CFLAGS) -o $@ -shared -nostdlib -Wl,-Bsymbolic,-O1,-soname=$(@F) \
-	-Wl,--no-undefined \
+	-Wl,--no-undefined $(LDFLAGS) \
 	$(LIB_DIR)/crtbegin_so.o $($(@F)_OBJS) $(LIB_DIR)/crtend_so.o \
 	$($(@F)_DEPS)
 endef
